<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project.assignmentapplication.HomeScreen">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/dataAnalyticsButton"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/dataAnalyticsButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/viewTransactionButton"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/viewTransactionButton"
        app:layout_constraintBottom_toTopOf="@+id/dataAnalyticsButton"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/addTransactionButton"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/addTransactionButton"
        app:layout_constraintBottom_toTopOf="@+id/viewTransactionButton"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/menuButton"
        app:layout_constraintBaseline_toBaselineOf="@+id/accountButton"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/optionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/optionsButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

    <Button
        android:id="@+id/accountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/accountButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
